--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg pl-3 pl-sm-0" id="navbar" style="padding-bottom: 33px;">
     <div class="container">
       <div class="navbar-brand-wrapper d-flex w-100">
-        <img src="images/fire.png" alt=""><div style="margin-top: 16px;margin-left: 16px;font-size: 30px;">Wildfire</div>
+        <img src="images/pig.jpg" alt=""><div style="margin-top: 16px;margin-left: 16px;font-size: 30px;">AccountUp</div>
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="mdi mdi-menu navbar-toggler-icon"></span>
         </button> 
@@ -25,7 +25,7 @@
         <ul class="navbar-nav align-items-lg-center align-items-start ml-auto">
           <li class="d-flex align-items-center justify-content-between pl-4 pl-lg-0">
             <div class="navbar-collapse-logo">
-              <img src="images/fire.png" alt="">
+              <img src="images/pig.jpg" alt="">
             </div>
             <button class="navbar-toggler close-button" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="mdi mdi-close navbar-toggler-icon pl-5"></span>
@@ -42,7 +42,7 @@
           </li>
 
           <li class="nav-item btn-contact-us pl-4 pl-lg-0">
-            <button class="btn btn-info" data-toggle="modal" data-target="#exampleModal">Contact Wildfire Relief Organizations</button>
+            <button class="btn btn-info" data-toggle="modal" data-target="#exampleModal">Contact Financial Relief Organizations</button>
           </li>
         </ul>
       </div>
@@ -51,76 +51,15 @@
   </header>
   <div class="banner" >
     <div class="container">
-      <h1 class="font-weight-semibold" style="font-size: 30px; padding-bottom: 20px;">Wildfire Prediction</h1>
-      <h6 class="font-weight-normal text-muted pb-3">During the last few years, terrible wildfires are spreading all over the world. When the summer season starts, these events tend to appear more often, and the damage and destruction to human lives and property is catastrophic. We decided to build a web-app using AI and ML to help notify people who might be in potential danger of getting affected by these wildfires</h6>
+      <h1 class="font-weight-semibold" style="font-size: 30px; padding-bottom: 20px;">Bank Account Prediction</h1>
+      <h6 class="font-weight-normal text-muted pb-3">Financial inclusion remains one of the main obstacles to economic and human development in Africa.Traditionally, access to bank accounts has been regarded as an indicator of financial inclusion. Access to bank accounts enable households to save and make payments while also helping businesses build up their credit-worthiness and improve their access to loans, insurance, and related services. Therefore, access to bank accounts is an essential contributor to long-term economic growth.And this is why my app tries to predict whether or not you can open a bank account in your country</h6>
 
     
     </div>
   </div>
-  <div class="contestyle" style="margin-top: 50px;"><iframe src="https://share.streamlit.io/vtprince/wildfireprediction/main" width="750" height="500" style="position: relative;left: 20px;"></iframe>
-    <img src="images/Capture2.PNG" style="position: relative;left:150px;bottom: 280px;" alt=""></div>
-
-  <div>
-    <div class="container">
-      <section class="features-overview" id="features-section" >
-        <div style="padding-top: 0px;" class="content-header" >
-          <h2>How does the model work?</h2>
-          <h6 class="section-subtitle text-muted">Given that a wildfire is raging nearby, will there be a wildfire in the city of Los Angeles from here to 3 days? <br>Will there be a wildfire from 3 days to 7 days? Will there be a wildfire from 7 days to 10 days</h6>
-        </div>
-        <div class="d-md-flex justify-content-between">
-          <div class="grid-margin d-flex justify-content-start">
-            <div class="features-width">
-              <img src="images/distance.png" alt="" class="img-icons">
-              <h5 class="py-3">Finding<br>Distance</h5>
-              <p class="text-muted">The model first finds the distance between your city and the nearby wildfires</p>
-              <a href="#"><p class="readmore-link">Readmore</p></a>  
-            </div>
-          </div>
-          <div class="grid-margin d-flex justify-content-center">
-            <div class="features-width">
-              <img src="images/Group7.svg" alt="" class="img-icons">
-              <h5 class="py-3">Calculating<br>Acres Burned</h5>
-              <p class="text-muted">The model then ingests the total acres of wildfire burned and matches it with its previous records in the database </p>
-              <a href="#"><p class="readmore-link">Readmore</p></a>
-            </div>
-          </div>
-          <div class="grid-margin d-flex justify-content-end">
-            <div class="features-width">
-              <img src="images/Group5.svg" alt="" class="img-icons">
-              <h5 class="py-3">Days to <br>Reach</h5>
-              <p class="text-muted">Finally the model predicts whether or not the particular wildfire will reach your city</p>
-              <a href="#"><p class="readmore-link">Readmore</p></a>
-            </div>
-          </div>
-        </div>
-      </section>     
-      <section class="digital-marketing-service" id="digital-marketing-section">
-        <div class="row align-items-center">
-          <div class="col-12 col-lg-7 grid-margin grid-margin-lg-0" data-aos="fade-right">
-            <h3 class="m-0">Impact on Animals<br>Due to Wildfires!</h3>
-            <div class="col-lg-7 col-xl-6 p-0">
-              <p class="py-4 m-0 text-muted">Each year an unreported and inconceivable number of foxes, rabbits, deer, frogs, mice, coyotes, and other animals are smoked out of their homes and burned alive.</p>
-              <p class="font-weight-medium text-muted">People are unavoidably separated from their pets and livestock and wildlife often has nowhere to turn.</p>
-            </div>    
-          </div>
-          <div class="col-12 col-lg-5 p-0 img-digital grid-margin grid-margin-lg-0" data-aos="fade-left">
-            <img src="images/wildfier.jpg" alt="" class="img-fluid">
-          </div>
-        </div>
-        <div class="row align-items-center">
-          <div class="col-12 col-lg-7 text-center flex-item grid-margin" data-aos="fade-right">
-            <img src="images/stock.jpg" alt="" class="img-fluid">
-          </div>
-          <div class="col-12 col-lg-5 flex-item grid-margin" data-aos="fade-left">
-            <h3 class="m-0">Wildfires destroy thousands<br>of structures each year.</h3>
-            <div class="col-lg-9 col-xl-8 p-0">
-              <p class="py-4 m-0 text-muted">Since 2005, more than 89,000 structures have been destroyed by wildfires resulting in an untold number of fatalities, evacuations, and personal losses.</p>
-              <p class="pb-2 font-weight-medium text-muted">The number of structures destroyed, rather than the number of acres burned, is a more telling measure of the broad social, economic, and community impacts from wildfires.</p>
-            </div>
-            <button class="btn btn-info">Readmore</button>
-          </div>
-        </div>
-      </section>     
+  <div class="contestyle" style="margin-top: 50px;"><iframe src="https://share.streamlit.io/vtprince/blackathon/main" width="750" height="1100" style="position: relative;left: 350px;"></iframe>
+ 
+ 
    
 
       <section class="contact-us" id="contact-section">
@@ -137,7 +76,7 @@
       <section style="position: relative;left: 200px;" class="contact-details" id="contact-details-section">
         <div class="row text-center text-md-left">
           <div class="col-12 col-md-6 col-lg-3 grid-margin" style="left: 100;">
-            <img src="images/fire.png" alt=""><div style="margin-top: 16px;font-size: 20px;">Wildfire</div>
+            <img src="images/pig.jpg" alt style="height:40px"><div style="margin-top: 16px;font-size: 20px;">AccountUp</div>
             <div class="pt-2">
               <p class="text-muted m-0">varangulati@gmail.com</p>
               <p class="text-muted m-0">906-179-8309</p>
